--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,3 +1,18 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+.header-nav {
+	background-color: #555;
+	color: white;
+	padding: 10px;
+}
+
+.nav-link {
+	background-color: #555;
+	color: white;
+	text-decoration: none;
+	margin-right: 10px;
+	padding: 5px 10px;
+	border-radius: 4px;
+}
+
+.nav-link:hover {
+	background-color: #555;
+}
